# PSiO

projects/: SetCommonConfig.cmake
projects/bit_fiddling/: CMakeLists.txt
projects/bit_fiddling/include/: bitlib.h
projects/bit_fiddling/src/: bitlib.c
projects/bit_fiddling/test/: test_bitlib.cpp
projects/cash/: CMakeLists.txt  main.c
projects/char/: CMakeLists.txt  main.c
projects/chg/: CMakeLists.txt  main.c
projects/conditional_compilation/: CMakeLists.txt  main.c
projects/custom_types/: CMakeLists.txt
projects/custom_types/include/: tasks.h
projects/custom_types/src/: tasks.c
projects/custom_types/test/: test_tasks.cpp
projects/greet/: CMakeLists.txt  main.c
projects/literals/: CMakeLists.txt  main.c
projects/memory_management/: CMakeLists.txt  main.c
projects/memory_management/include/: mymem.h
projects/memory_management/test/: test_mymem.cpp
projects/pointers/: CMakeLists.txt  main.c
projects/pointers/include/: ptrlib.h
projects/pointers/test/: test_ptrlib.cpp
projects/program_organization/: CMakeLists.txt
projects/program_organization/include/: mylib.h
projects/program_organization/src/: mylib.c
projects/program_organization/test/: main_gtest.cpp  test_mylib.cpp
projects/stats/: CMakeLists.txt  main.c
projects/sum/: CMakeLists.txt  main.c
projects/wdn/: CMakeLists.txt  main.c
